Source/WebKit/UIProcess/ios/forms/WKFileUploadPanel.mm
@@ -475,6 +475,7 @@ static NSSet<NSString *> *UTIsForMIMETypes(NSArray *mimeTypes)
     if (_documentContextMenuInteraction) {
         [_view removeInteraction:_documentContextMenuInteraction.get()];
         _documentContextMenuInteraction = nil;
+        [_view _removeContextMenuViewIfPossible];
     }
 }
 
